--- a/src/app/pages/apps/localadmin/localadmin.component.html
+++ b/src/app/pages/apps/localadmin/localadmin.component.html
@@ -12,7 +12,7 @@
           
               <div class="col-lg-6">
                 <mat-label class="mat-subtitle-2 f-w-600 m-b-8 d-block">Unit Name</mat-label>
-                <app-select-search [errorMessage]="'Parent Unit is Required'" [selectData]="unitNameUpdated" (bankSelected)="onBankSelected($event, 1)"></app-select-search>
+                <app-select-search [errorMessage]="'Unit Name is Required'" [selectData]="unitNameUpdated" (bankSelected)="onBankSelected($event, 1)"></app-select-search>
     
 
 
