1 hierarchy chart 2. usbviolation updated 	modified:   src/app/layouts/full/vertical/sidebar/sidebar-data.ts 	modified:   src/app/pages/apps/apps.module.ts 	modified:   src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.scss 	modified:   src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.ts 	modified:   src/app/pages/apps/log-viewer/log-viewer.component.html 	modified:   src/app/pages/apps/usb-violation/usb-violation.component.html 	modified:   src/app/pages/apps/usb-violation/usb-violation.component.ts 	new file:   src/app/pages/apps/usb-violation/usbdeleteform/usbdeleteform.component.html 	new file:   src/app/pages/apps/usb-violation/usbdeleteform/usbdeleteform.component.scss 	new file:   src/app/pages/apps/usb-violation/usbdeleteform/usbdeleteform.component.spec.ts 	new file:   src/app/pages/apps/usb-violation/usbdeleteform/usbdeleteform.component.ts 	modified:   src/app/services/common-services.service.ts

--- a/src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.scss
+++ b/src/app/pages/apps/hierarchy-chart/hierarchy-chart.component.scss
@@ -1,14 +1,14 @@
 
  
  
-  .chartContainer {
-    height: 85vh; 
-    overflow: auto; 
-    // box-sizing: border-box; 
-    margin-top: 1vm;
-    // justify-content: center;
-    // position: center;
-  }
+.chartContainer {
+  height: 85vh; 
+  overflow: auto; 
+  // box-sizing: border-box; 
+  margin-top: 10px;
+  justify-content: center;
+  position: center;
+}
   
   #min, #max {
     position: absolute;
