--- a/src/app/pages/apps/log-viewer/log-viewer.component.html
+++ b/src/app/pages/apps/log-viewer/log-viewer.component.html
@@ -11,9 +11,9 @@
           <mat-form-field appearance="outline" class="w-100" color="primary"> 
             <mat-select placeholder="Select" formControlName="unitname" multiple (selectionChange)="onUnitSelected($event.value)" 
                         style="padding-top: 1px; padding-bottom: 1px;">
-                        <mat-option>
+                        <!-- <mat-option>
                           <ngx-mat-select-search [formControl]="unitnameMultiFilterCtrl" placeholder="Search Unit Names"></ngx-mat-select-search>
-                        </mat-option>
+                        </mat-option> -->
                         
               <mat-option *ngFor="let item of unitName" [value]="item.unit_id">
                 {{ item.unit_name }}
